Add content to index.html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <h2>Hello and a warm welcome to the 8 mile cafe!</h2>
     <p>To celebrate our 30 year anniversary we have handpicked our <em><strong>family favourates</strong></em> and most <em><strong>popular</strong></em> recipes for everyone to enjoy!</p>
     <ul>
-        <li>Mom's Spagetti</li>
-        <li>Cheddar Bob's Cheddar Cheese Pizza</li>
-        <li>Papa Doc's Philli Steak Toastie</li>
+        <a href=""></a><li>Mom's Spagetti</li></a>
+        <a href=""></a><li>Cheddar Bob's Chedder Cheese Pizza</li></a>
+        <a href=""></a><li>Papa Docs's Phili Steak Toastie</li></a>
     </ul>
+
+    <p>We hope you all enjoy our famous recipes, please share this website so everyone can enjoy the taste of 8 Mile!</p>
 </body>
 </html>
