Updat content in index.html and mom-spaghetti.hmtl

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>The 8 Mile Cafe</h1>
     <img src="../odin-recipes/images/cafe.jpg" alt="Cafe">
     <h2>Hello and a warm welcome to the 8 mile cafe!</h2>
-    <p>To celebrate our 30 year anniversary we have handpicked our <em><strong>family favourates</strong></em> and most <em><strong>popular</strong></em> recipes for everyone to enjoy!</p>
+    <p>To celebrate our 30 year anniversary we have handpicked our <em><strong>classic</strong></em> and most <em><strong>popular</strong></em> recipes for everyone to enjoy!</p>
     <ul>
-        <a href=""></a><li>Mom's Spagetti</li></a>
-        <a href=""></a><li>Cheddar Bob's Chedder Cheese Pizza</li></a>
-        <a href=""></a><li>Papa Docs's Phili Steak Toastie</li></a>
+        <a href="../odin-recipes/recipes/moms-spaghetti.html"><li>Mom's Spagetti</li></a>
+        <a href=""><li>Cheddar Bob's Chedder Cheese Pizza</li></a>
+        <a href=""><li>Papa Docs's Phili Steak Toastie</li></a>
     </ul>
 
     <p>We hope you all enjoy our famous recipes, please share this website so everyone can enjoy the taste of 8 Mile!</p>
