--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h2>Hello and a warm welcome to the 8 mile cafe!</h2>
     <p>To celebrate our 30 year anniversary we have handpicked our <em><strong>classic</strong></em> and most <em><strong>popular</strong></em> recipes for everyone to enjoy!</p>
     <ul>
-        <a href="../odin-recipes/recipes/moms-spaghetti.html"><li>Mom's Spagetti</li></a>
-        <a href=""><li>Cheddar Bob's Chedder Cheese Pizza</li></a>
-        <a href=""><li>Papa Docs's Phili Steak Toastie</li></a>
+        <a href="recipes/moms-spaghetti.html"><li>Mom's Spagetti</li></a>
+        <a href="recipes/cheddar-bob.html"><li>Cheddar Bob's Chedder Cheese Pizza</li></a>
+        <a href="recipes/papa-doc.html"><li>Papa Docs's Phili Steak Toastie</li></a>
     </ul>
 
     <p>We hope you all enjoy our famous recipes, please share this website so everyone can enjoy the taste of 8 Mile!</p>
