Bug fix - Hero image not working
Update the image src

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>The 8 Mile Cafe</h1>
-    <img src="../odin-recipes/images/cafe.jpg" alt="Cafe">
+    <img src="images/cafe.jpg" alt="Cafe">
     <h2>Hello and a warm welcome to the 8 mile cafe!</h2>
     <p>To celebrate our 30 year anniversary we have handpicked our <em><strong>classic</strong></em> and most <em><strong>popular</strong></em> recipes for everyone to enjoy!</p>
     <ul>
