Update - CSS has been added to the project

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The 8 Mile Cafe</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>The 8 Mile Cafe</h1>
+    <h1>THE 8 MILE CAFE</h1>
     <img src="images/cafe.jpg" alt="Cafe">
     <h2>Hello and a warm welcome to the 8 mile cafe!</h2>
     <p>To celebrate our 30 year anniversary we have handpicked our <em><strong>classic</strong></em> and most <em><strong>popular</strong></em> recipes for everyone to enjoy!</p>
